welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:51: error: Unmatched closing brace '}' ignored here
 }
 ^