welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var c = 1
	var T = new Array[Int](1000)
	var r = 0
	var e = 0
	var g = 0
	var comp = 0

	T(0) = 0
	T(1) = 1
	T(2) = 2

	while (c < 10)
	{
	
		while(10 > e)
		{
		
			if(T(e) == c )
			{
				r = r +1 ;
			}
		
		e = e+1
		
		}
		if ( T(c) - r == 0)
		{
			c = c + 1
		}

		if (T(c) - r > 0)
		{
			for (e <- g to g + T(c) - r)
			{
				T(e) = c
			}
			c = c + 1 
		}	
	
	}

	return r
	}
	return T(num)
	

	
} 
